--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
     <title>Quick Tool Resurection</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
-<body onload="init()"> 
+<body onload="init()">
     <h3>TIME</h3>
     <p>edit layers with mouse</p>
     <canvas id="canvasTime" width=auto height="100"></canvas>
-    
+
     <h3>DEPTH</h3>
-    <p>edit layers with mouse</p>+
+    <p>edit layers with mouse</p>
     <canvas id="canvasDepth" width=auto height="100"></canvas>
 
     <p id="demo"></p>
-
-    <script src="script.js"></script>
+   // <script type="module" src="ZLoc.js"></script>
+    <script type="module" src="script.js"></script>
+    
 </body>
 
 </html>
