--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: inline-block;
+            width: 100px;
+            /* Adjust the width based on your design */
+        }
+
+        .form-group select {
+            width: 150px;
+            /* Adjust the width based on your design */
+        }
+    </style>
+
     <title>Quick Tool Resurection</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
