--- a/chart.html
+++ b/chart.html
@@ -4,67 +4,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Drawing App</title>
+  <title>Simple Webpage with Hamburger Menu</title>
   <style>
-    #canvas {
-      border: 1px solid #000;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav {
+      background-color: #eee;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .menu-icon {
+      cursor: pointer;
+    }
+
+    section {
+      padding: 20px;
+    }
+
+    canvas {
+      display: block;
+      width: 100%;
+      height: 150px;
+      background-color: #3498db;
+      margin-top: 20px;
+    }
+
+
+    .menu-list {
+      list-style: none;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 40px;
+      left: 5px;
+      padding: 0px;
+      margin: 0;
+      background-color: #eee;
+    }
+
+    .menu-list.active {
+      display: flex;
+    }
+
+    .menu-list li {
+      margin-left: 0px;
+      margin-right: 10px;
+      margin-bottom: 2px;
+    }
+
+    .sub-menu {
+      margin-left: 0px;
+      margin-right: 0;
+      padding: 0px;
+    }
+
+
+
+    .menu-icon {
+      display: block;
     }
   </style>
 </head>
 
 <body>
 
-  <canvas id="canvas" width="800" height="600"></canvas>
+
+  <nav>
+    <div class="menu-icon">&#9776;</div>
+    <ul class="menu-list">
+      <ul class="sub-menu">
+        <li><label><input type="checkbox" name="gasA"> Gas A</label></li>
+        <li><label><input type="checkbox" name="oilA"> Oil A</label></li>
+        <li><label><input type="checkbox" name="resA"> Restrict A</label></li>
+        <li><label><input type="checkbox" name="gasB"> Gas B</label></li>
+        <li><label><input type="checkbox" name="oilB"> Oil B</label></li>
+        <li><label><input type="checkbox" name="resB"> Restrict B</label></li>
+      </ul>
+    </ul>
+  </nav>
+
+  <section>
+    <h2>Welcome to the Simple Webpage!</h2>
+    <p>This is the main content section.</p>
+    <canvas></canvas>
+  </section>
 
   <script>
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    let drawing = false;
 
-    canvas.addEventListener('mousedown', startDrawing);
-    canvas.addEventListener('mouseup', stopDrawing);
-    canvas.addEventListener('mousemove', draw);
 
-    canvas.addEventListener('touchstart', startTouchDrawing);
-    canvas.addEventListener('touchend', stopDrawing);
-    canvas.addEventListener('touchmove', draw);
+    document.querySelector('.menu-icon').addEventListener('click', toggleMenu);
 
-    // Prevent scrolling on touchscreen devices
-    document.body.addEventListener('touchmove', function (e) {
-      if (drawing) {
-        e.preventDefault();
-      }
-    }, { passive: false });
 
-    function startDrawing(e) {
-      console.log("start mouse");
-      drawing = true;
-      draw(e);
-    }
-    function startTouchDrawing(e) {
-      console.log("start touch");
-      drawing = true;
-      draw(e);
-    }
-
-    function stopDrawing() {
-      drawing = false;
-      ctx.beginPath();
-    }
-
-    function draw(e) {
-      if (!drawing) return;
-
-      const x = e.clientX || e.touches[0].clientX;
-      const y = e.clientY || e.touches[0].clientY;
-
-      ctx.lineWidth = 5;
-      ctx.lineCap = 'round';
-      ctx.strokeStyle = '#000';
-      ctx.lineTo(x, y);
-      ctx.stroke();
-      ctx.beginPath();
-      ctx.moveTo(x, y);
+    function toggleMenu() {
+      const menuList = document.querySelector('.menu-list');
+      menuList.classList.toggle('active');
     }
   </script>
 
