--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
 
 <body>
 
+
+    <header>
+        <div class="logo-container">
+            <a href="https://www.qintegral.com.au/" class="logo-link">
+                <img src="https://www.qintegral.com.au/templates/g5_helium/custom/images/qintegral_web_top_logo_300px.jpg"
+                    alt="Logo" class="logo-img">
+            </a>
+        </div>
+        <div class="title">
+            <h1>Quiacito&trade; Demo Tool</h1>
+        </div>
+    </header>
+
+
+
     <nav>
         <div class="menu-icon">&#9776;</div>
         <ul class="menu-list">
@@ -32,13 +47,6 @@
         </ul>
     </nav>
 
-    <h1>
-        <img id="logo"
-            src="https://www.qintegral.com.au/templates/g5_helium/custom/images/qintegral_web_top_logo_300px.jpg"
-            alt="QIntegral Logo">
-
-        Quiacito&trade; Demo Tool
-    </h1>
 
     <!--
        <p>Edit layers in TIME or DEPTH panels with mouse. +Ctrl for flat layers, +Shift+Ctrl moves whole layer.</p>
