hc visibility, hotkeys

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <div class="menu-icon">&#9776;</div>
         <ul class="menu-list">
             <ul class="sub-menu">
-                <li><label><input type="checkbox" id="gasA"> Gas A</label></li>
-                <li><label><input type="checkbox" id="oilA"> Oil A</label></li>
-                <li><label><input type="checkbox" id="resA"> Restrict A</label></li>
-                <li><label><input type="checkbox" id="gasB"> Gas B</label></li>
-                <li><label><input type="checkbox" id="oilB"> Oil B</label></li>
-                <li><label><input type="checkbox" id="resB"> Restrict B</label></li>
-                <li><label><input type="checkbox" id="layerNames" checked> Show Layer Names</label></li>
+                <li><label><input type="checkbox" id="gasA"> Gas A [1]</label></li>
+                <li><label><input type="checkbox" id="oilA"> Oil A [2]</label></li>
+                <li><label><input type="checkbox" id="resA"> Restrict A [3]</label></li>
+                <li><label><input type="checkbox" id="gasB"> Gas B [4]</label></li>
+                <li><label><input type="checkbox" id="oilB"> Oil B [5]</label></li>
+                <li><label><input type="checkbox" id="resB"> Restrict B [6]</label></li>
+
+                <li><label><input type="checkbox" id="layerNames" checked> Show Layer Names [L]</label></li>
+                <li><label><input type="checkbox" id="showHC" checked> Show Hydrocarbons [H]</label></li>
+
                 <li class="regular-button" id="help">Help...</li>
-
-
-
                 <li class="reset-button" id="reset">Reset</li>
             </ul>
         </ul>
