--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
         <div class="menu-icon">&#9776;</div>
         <ul class="menu-list">
             <ul class="sub-menu">
-                <li><label><input type="checkbox" id="gasA"> Gas A [1]</label></li>
-                <li><label><input type="checkbox" id="oilA"> Oil A [2]</label></li>
-                <li><label><input type="checkbox" id="resA"> Restrict A [3]</label></li>
-                <li><label><input type="checkbox" id="gasB"> Gas B [4]</label></li>
-                <li><label><input type="checkbox" id="oilB"> Oil B [5]</label></li>
-                <li><label><input type="checkbox" id="resB"> Restrict B [6]</label></li>
-
-                <li><label><input type="checkbox" id="layerNames" checked> Show Layer Names [L]</label></li>
-                <li><label><input type="checkbox" id="showHC" checked> Show Hydrocarbons [H]</label></li>
-
+                <li><label><input type="checkbox" id="gasA"> Gas A</label><span>1</span></li>
+                <li><label><input type="checkbox" id="oilA"> Oil A</label><span>2</span></li>
+                <li><label><input type="checkbox" id="resA"> Restrict A</label><span>3</span></li>
+                <li><label><input type="checkbox" id="gasB"> Gas B</label><span>4</span></li>
+                <li><label><input type="checkbox" id="oilB"> Oil B</label><span>5</span></li>
+                <li><label><input type="checkbox" id="resB"> Restrict B</label><span>6</span></li>
+                <li><label><input type="checkbox" id="layerNames" checked> Show Layer Names</label><span>L</span></li>
+                <li><label><input type="checkbox" id="showHC" checked> Show Hydrocarbons</label> <span>H</span></li>
                 <li class="regular-button" id="help">Help...</li>
                 <li class="reset-button" id="reset">Reset</li>
             </ul>
