--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
 <!--<body onload="init()"> -->
 
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L7ND6GMCKM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L7ND6GMCKM');
+</script>
+
 <body>
 
 
